# axum-template

./: Cargo.toml  rust-toolchain.toml
docs/: error-handling-guide.md
server/: Cargo.toml
server/src/: lib.rs  main.rs  router.rs
server/src/controller/: errors.rs  mod.rs  template.rs  user.rs
server/src/controller/types/: templates.rs
server/src/response/: error.rs  mod.rs
server/src/service/: mod.rs  simple.rs  template.rs  user.rs
